--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ img {
 }
 label {
   background-color: rgb(56, 163, 163);
+  border-radius: 5px;
   color: brown;
 }
 h1 {
@@ -28,6 +29,7 @@ h1 {
 div {
   background-color: blanchedalmond;
   border-radius: 20px;
+  text-align: center;
 }
 #countLabel {
   display: block;
@@ -49,4 +51,8 @@ div {
 }
 .buttons:hover {
   background-color: blue;
+}
+#myRNGButton {
+  font-size: 3em;
+  padding: 5px, 25px;
 }
